# mesos_test_frameworks

./: CMakeLists.txt  README.md  rebuild_linux.sh
tests/: CMakeLists.txt
tests/rendler/: CMakeLists.txt  rendler.cpp
